--- a/Bhoom/.classpath
+++ b/Bhoom/.classpath
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry excluding="sc/engine/BaseNegamaxEngine.java|sc/engine/NFullQuiescenceEngine.java|sc/engine/NLimitedDepthQuiescenceEngine.java|sc/engine/EvalTTable.java|sc/engine/SeeOld.java|sc/engine/DummyEngineListener.java|sc/engine/engines/IDAspWinEngine.java|sc/engine/engines/MTDFBinaryEngine.java|sc/engine/engines/MTDFEngine.java|sc/engine/engines/MTDFHybridEngine.java" kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="src" path="junit"/>
+	<classpathentry excluding="sc/engine/TestEvalTTable.java|sc/engine/TestQuiescence.java" kind="src" path="junit"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
