--- a/Bhoom/.classpath
+++ b/Bhoom/.classpath
@@ -4,5 +4,10 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry excluding="sc/engine/TestEvalTTable.java|sc/engine/TestQuiescence.java" kind="src" path="junit"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="lib/commons-math3-3.2.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/Bhoom/ref-docs/commons-math3-3.2-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
